--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,15 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            minifyEnabled true
+
+            minifyEnabled false
+
             useProguard false
         }
 
         release {
             minifyEnabled true
+
             useProguard true
         }
     }
@@ -62,7 +65,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-//    apply plugin: 'com.google.gms.google-services'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.8.1'
@@ -73,6 +76,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+    compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-core:10.0.1'
@@ -80,4 +84,9 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     provided 'javax.annotation:jsr250-api:1.0'
+    apply plugin: 'com.google.gms.google-services'
 }
+
+
+
+
