--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".login.LoginActivity">
             <intent-filter>
@@ -19,7 +20,10 @@
         <activity android:name=".createaccount.CreateAccountActivity" />
         <activity android:name=".profilepage.ProfilePageActivity" />
         <activity android:name=".splash.SplashActivity" />
-        <activity android:name=".photodetail.PhotoDetailActivity"></activity>
+        <activity android:name=".photodetail.PhotoDetailActivity" />
+        <activity android:name=".profilesettings.ProfileSettingsActivity" />
+        <activity android:name=".profiledetail.ProfileDetailActivity" />
+        <activity android:name=".photogallery.PhotoGalleryActivity"></activity>
     </application>
 
 </manifest>
